--- a/main.css
+++ b/main.css
@@ -66,6 +66,30 @@ h1 {
 	font-size:12px;
 	color:#666666;
 }
+.row {
+	clear:both;
+}
+.block {
+	width:50%;
+	float:left;
+}
+.block.image {
+	line-height:0;
+}
+.block.text {
+	width:40%;
+	float:left;
+	padding:30px 5%;
+}
+.block img {
+	width:100%;
+}
+@media screen and (max-width: 900px) {
+	.block.text {
+		padding:15px 3%;
+		width:44%;
+	}
+}
 @media screen and (max-width: 768px) {
 	#sidebar {
 		padding:30px 3%;
@@ -88,6 +112,9 @@ h1 {
 	#main h1 {
 		font-size:24px;
 	}
+	#main h2 {
+		font-size:18px;
+	}
 }
 @media screen and (max-width: 600px) {
 	#sidebar {
@@ -100,6 +127,13 @@ h1 {
 	#main {
 		margin:0;
 		padding:0 3% 30px;
+	}
+	.block.text {
+		float:none;
+		width:100%;
+	}
+	.block.image {
+		display:none;
 	}
 }
 
