added week 3 blog posts and updated index

--- a/unit1_projects/stylesheets/blog.css
+++ b/unit1_projects/stylesheets/blog.css
@@ -10,6 +10,12 @@ a, a:link, a:visited {
 h1 {
 	color:#23afaf;
 }
+.right {
+	float:right;
+}
+img.right {
+	max-width:45%;
+}
 #sidebar {
 	position:fixed;
 	width:20%;
