--- a/main.css
+++ b/main.css
@@ -51,6 +51,7 @@ h1 {
 	font-weight:normal;
 	font-size:28px;
 	margin-bottom:10px;
+	line-height:36px;
 }
 #main article {
 	border-bottom:1px solid #EBEBEB;
