--- a/blog-posts/stylesheets/blog.css
+++ b/blog-posts/stylesheets/blog.css
@@ -57,6 +57,7 @@ img.right {
 	font-weight:normal;
 	font-size:28px;
 	margin-bottom:10px;
+	line-height:36px;
 }
 #main article {
 	border-bottom:1px solid #EBEBEB;
